# pattern-analyzer

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LLM.txt  README.md  README_TR.md  app.py  debug_bmr.py  debug_engine.py  index.html  mkdocs.yml  pyproject.toml  readthedocs.yml  report.json  requirements.txt  setup.cfg  sitemap.xml  test_results.json
.github/workflows/: ci.yml  gh-pages.yml
api-reference/: index.html
configs/: example.json  index.html
docs/: api-reference.md  getting-started.md  index.md  plugin-developer-guide.md  test-reference.md  user-guide.md
docs/configs/: README.md  example.yml
getting-started/: index.html
patternanalyzer/: __init__.py  api.py  cli.py  discovery.py  engine.py  plugin_api.py  sandbox_runner.py  tui.py
patternanalyzer/plugins/: __init__.py  approximate_entropy.py  autocorrelation.py  autoencoder_anomaly.py  binary_matrix_rank.py  chi_square.py  classifier_labeler.py  conditional_entropy.py  dft_spectral_advanced.py  diehard_3d_spheres.py  diehard_birthday_spacings.py  diehard_overlapping_sums.py  dotplot.py  ecb_detector.py  fft_placeholder.py  fft_spectral.py  frequency_pattern.py  frequency_within_block.py  gap_test.py  hurst_exponent.py  known_constants_search.py  kolmogorov_smirnov.py  linear_complexity.py  longest_run.py  lstm_gru_anomaly.py  lz_complexity.py  magic_detector.py  monobit.py  mutual_information.py  nist_dft_spectral.py  non_overlapping_template_matching.py  parallel_helpers.py  pdf_structure.py  permutation_test.py  png_structure.py  poker_test.py  random_excursions.py  runs_test.py  serial_test.py  testu01_smallcrush.py  (+4 more)
patternanalyzer/static_ui/: index.html
patternanalyzer/validation/: p_value_calibration.py
patternlab/: LLM_Output_20251025120350.txt  __init__.py  api.py  cli.py  discovery.py  engine.py  plugin_api.py  sandbox_runner.py  tui.py
patternlab/plugins/: __init__.py  autocorrelation.py  autoencoder_anomaly.py  binary_matrix_rank.py  block_frequency_test.py  classifier_labeler.py  conditional_entropy.py  cusum.py  dft_spectral_advanced.py  diehard_3d_spheres.py  diehard_birthday_spacings.py  diehard_overlapping_sums.py  dotplot.py  ecb_detector.py  fft_placeholder.py  fft_spectral.py  frequency_pattern.py  hurst_exponent.py  known_constants_search.py  linear_complexity.py  longest_run.py  lstm_gru_anomaly.py  lz_complexity.py  magic_detector.py  maurers_universal.py  monobit.py  mutual_information.py  nist_dft_spectral.py  overlapping_template_matching.py  parallel_helpers.py  pdf_structure.py  png_structure.py  random_excursions_variant.py  runs_test.py  serial_test.py  testu01_smallcrush.py  transfer_entropy.py  vigenere.py  zip_structure.py
patternlab/static_ui/: index.html
plugin-developer-guide/: index.html
scripts/: list_entrypoints.py  run_nist_dft_check.py
search/: search_index.json
templates/: descriptions.json  report_template.html
test-reference/: index.html
tests/: test_advanced_stat_tests.py  test_approximate_entropy.py  test_autocorrelation.py  test_autoencoder_anomaly.py  test_bench_calibrate.py  test_binary_matrix_rank.py  test_block_frequency.py  test_bytesview_bit_view.py  test_chi_square.py  test_classifier_labeler.py  test_cli.py  test_conditional_entropy.py  test_cusum.py  test_dotplot.py  test_ecb_detector.py  test_engine.py  test_entry_points.py  test_entrypoints.py  test_fdr_scorecard.py  test_fft_placeholder.py  test_fft_spectral.py  test_frequency_pattern.py  test_frequency_within_block.py  test_gap_test.py  test_html_report.py  test_known_constants_search.py  test_kolmogorov_smirnov.py  test_linear_complexity.py  test_longest_run.py  test_lstm_gru_anomaly.py  test_lz_complexity.py  test_maurers_universal.py  test_monobit.py  test_mutual_information.py  test_nist_dft_spectral.py  test_non_overlapping_template_matching.py  test_overlapping_template_matching.py  test_p_value_calibration.py  test_parallel_execution.py  test_permutation_test.py  (+10 more)
user-guide/: index.html
