[metadata]
name = patternlab
version = 0.1.0
description = Binary pattern analysis framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/patternlab
author = PatternLab Team
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Homepage = https://github.com/example/patternlab
    Repository = https://github.com/example/patternlab.git
    Issues = https://github.com/example/patternlab/issues

[options]
packages = find:
python_requires = >=3.10
install_requires =
    click>=8.0.0

[options.extras_require]
test =
    pytest>=7.0.0
fast =
    scipy>=1.9.0
    numpy>=1.23


[options.packages.find]
where = .

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v